--- a/mse/XRD_indexing.ipynb
+++ b/mse/XRD_indexing.ipynb
@@ -51,10 +51,9 @@
     "For pedagogical reasons, there are a few places for you to fill in your own code in order to make the notebook fully functional. These are delineated with the dashed lines as follows, and you should **only change what's inside**. You don't have to edit the text or code anywhere else. I've also included \"**TODO**\" to separate the background context from the actual instructions.\n",
     "\n",
     "```python\n",
-    "# ---------------------- #\n",
-    "# YOUR CODE HERE\n",
+    "# ----------  YOUR CODE HERE  ---------- #\n",
     "\n",
-    "# ---------------------- #\n",
+    "# -------------------------------------- #\n",
     "```\n",
     "\n",
     "To execute each cell of the notebook and automatically advance to the next cell, press `Shift+Enter`. If you edit the code in a cell, just press `Shift+Enter` to run it again. You have to execute **all** the code cells in this notebook in order from top to bottom (so don't skip around). A number `[#]` will appear to the left of the code cell once it's done executing.\n",
@@ -79,8 +78,9 @@
     "* Indexing powder XRD patterns is a **routine procedure with several repetitive tasks**, making it a great candidate for programmatic solutions. Write once, run anytime.\n",
     "* All the buzz around computer science can make these topics appear overwhelming and exclusive. Hopefully this notebook **lowers that barrier** by a teeny amount.\n",
     "* The choice of Python (over MATLAB, for example) is because it's **open source**, [beginner-friendly](https://xkcd.com/353/), easily integrated with [Jupyter](https://jupyter.org/), and **[insanely popular](https://149351115.v2.pressablecdn.com/wp-content/uploads/2017/09/projections-1-1024x878.png)**.\n",
-    "    * If this notebook gets you excited, there are plenty of great resources and courses out there for learning pure Python.\n",
-    "    * MSE 215: Computational Materials Science at UC Berkeley is a course that uses Python."
+    "    * If this notebook gets you excited, there are plenty of great resources and courses out there (e.g., CS 61) for learning pure Python.\n",
+    "    * MSE 215: Computational Materials Science at UC Berkeley is a course that uses Python.\n",
+    "    * DATA 100 and PHYSICS 188 also teach you Python and applied mathematics / data science."
    ]
   },
   {
@@ -157,13 +157,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------------------- #\n",
-    "# YOUR CODE HERE\n",
+    "# ----------  YOUR CODE HERE  ---------- #\n",
     "\n",
-    "wavelength = \n",
-    "angles = \n",
+    "wavelength =    # TODO: wavelength in nm as a float\n",
+    "angles =        # TODO: 2theta angles in degrees\n",
     "\n",
-    "# ---------------------- #"
+    "# -------------------------------------- #"
    ]
   },
   {
@@ -198,12 +197,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------------------- #\n",
-    "# YOUR CODE HERE\n",
+    "# ----------  YOUR CODE HERE  ---------- #\n",
     "\n",
-    "df = pd.DataFrame({'Wavelength':wavelength, })\n",
+    "df = pd.DataFrame({'Wavelength':wavelength, })   # TODO: add an entry for angles\n",
     "\n",
-    "# ---------------------- #\n",
+    "# -------------------------------------- #\n",
     "df  # you should see two columns with your data!"
    ]
   },
@@ -258,12 +256,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------------------- #\n",
-    "# YOUR CODE HERE\n",
+    "# ----------  YOUR CODE HERE  ---------- #\n",
     "\n",
-    "df['Theta'] = \n",
+    "df['Theta'] =    # TODO: calculate theta\n",
     "\n",
-    "# ---------------------- #\n",
+    "# -------------------------------------- #\n",
     "df   # you should now have a third column called 'Theta' that's been added"
    ]
   },
@@ -292,10 +289,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------------------- #\n",
-    "# YOUR CODE HERE\n",
+    "# ----------  YOUR CODE HERE  ---------- #\n",
     "\n",
-    "# ---------------------- #\n",
+    "# TODO: Add a column for the sine of the angle\n",
+    "\n",
+    "# -------------------------------------- #\n",
     "df   # you should now have a fourth column called 'Sine'"
    ]
   },
@@ -315,11 +313,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------------------- #\n",
-    "# YOUR CODE HERE\n",
+    "# ----------  YOUR CODE HERE  ---------- #\n",
+    "\n",
+    "# TODO: Calculate the interplanar spacing\n",
     "\n",
     "\n",
-    "# ---------------------- #\n",
+    "# -------------------------------------- #\n",
     "df   # you should now have a fifth column called 'Distance'"
    ]
   },
@@ -352,11 +351,12 @@
    "outputs": [],
    "source": [
     "df['Distance^2'] = df['Distance']**2   # Creates a sixth column\n",
-    "# ---------------------- #\n",
-    "# YOUR CODE HERE\n",
     "\n",
+    "# ----------  YOUR CODE HERE  ---------- #\n",
     "\n",
-    "# ---------------------- #\n",
+    "# TODO: Take the ratio\n",
+    "\n",
+    "# -------------------------------------- #\n",
     "df   # you should now have a seventh column called 'Ratio'"
    ]
   },
@@ -365,95 +365,10 @@
    "metadata": {},
    "source": [
     "#### 3.5 Figure out the crystal structure and index the peaks\n",
+    "\n",
     "OK! At this point, the ratios should be enough for you to deduce which crystal structure you have on your hands. \n",
     "This will allow you to index the peaks accordingly. \n",
-    "You can probably do this part by hand. \n",
-    "\n",
-    "----------------------------------------\n",
-    "\n",
-    "If you want to try it programmatically, you can read on. \n",
-    "The following cells are completed for you, so you just have to run them, assuming you used the same variable names I suggested. \n",
-    "There are probably smarter programmatic ways to do this, so any improvements are left as an exercise to the reader.\n",
-    "Note that *I'm assuming your system is cubic*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A bunch of constants for known crystal structures\n",
-    "fcc_ratios = np.array([3/3, 4/3, 8/3, 11/3, 12/3, 16/3, 19/3, 20/3])\n",
-    "bcc_ratios = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
-    "sc_ratios = np.array([1, 2, 3, 4, 5, 6, 8, 9, 10])\n",
-    "dc_ratios = np.array([3/3, 8/3, 11/3, 16/3, 19/3, 24/3])\n",
-    "s_to_hkl = {1:'(100)', 2:'(110)', 3:'(111)', 4:'(200)', 5:'(210)', 6:'(211)', \n",
-    "            8:'(220)', 9:'(221),(300)', 10:'(310)', 11:'(311)', 12:'(222)', 13:'(320)', 14:'(321)',\n",
-    "            16:'(400)', 17:'(410),(322)', 18:'(411),(330)', 19:'(331)', 20:'(420)'}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll use the theoretical `ratios` for comparison by finding the difference with our computed ratios and taking the norm of the resulting array. For each structure, we use the `s_to_hkl` dictionary to add the planes to our DataFrame, where \n",
-    "\n",
-    "$$ s \\stackrel{\\text{def}}{=} h^2 + k^2 + l^2 $$\n",
-    "\n",
-    "is what Cullity calls the **quadratic form** of the Miller index. Based on the crystal system, we know exactly what factor to multiply our `df['Ratio']` by, namely the $s$ of the first diffraction plane. (Why?)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = len(angles)   # How many angles did we actually collect?\n",
-    "                  # Avoids out-of-bounds errors when making comparison.\n",
-    "tol = 1e-2        # ALWAYS compare with a numerical tolerance; never == 0\n",
-    "\n",
-    "err_fcc = np.linalg.norm(df['Ratio'] - fcc_ratios[:n])\n",
-    "err_bcc = np.linalg.norm(df['Ratio'] - bcc_ratios[:n])\n",
-    "err_sc  = np.linalg.norm(df['Ratio'] - sc_ratios[:n])\n",
-    "err_dc  = np.linalg.norm(df['Ratio'] - dc_ratios[:n])\n",
-    "\n",
-    "if err_fcc < tol:\n",
-    "    print('Structure is likely face-centered cubic.')\n",
-    "    df['s'] = round(df['Ratio'] * 3)   # we use round() to get the nearest integer\n",
-    "    df['Plane'] = [s_to_hkl[s] for s in df['s']]   # the RHS is called a list comprehension\n",
-    "elif err_bcc < tol:\n",
-    "    print('Structure is likely body-centered cubic.')\n",
-    "    df['s'] = round(df['Ratio'] * 2)\n",
-    "    df['Plane'] = [s_to_hkl[s] for s in df['s']]\n",
-    "elif err_sc < tol:\n",
-    "    print('Structure is likely simple cubic.')\n",
-    "    df['s'] = round(df['Ratio'])\n",
-    "    df['Plane'] = [s_to_hkl[s] for s in df['s']]\n",
-    "elif err_dc < tol:\n",
-    "    print('Structure is likely diamond cubic.')\n",
-    "    df['s'] = round(df['Ratio'] * 3)\n",
-    "    df['Plane'] = [s_to_hkl[s] for s in df['s']]\n",
-    "else:\n",
-    "    print('Structure unclear.',\n",
-    "          'Maybe a non-cubic crystal system or a multi-component basis.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And just for good measure, let's run the cell below to show our final DataFrame with all of our calculations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df  # ta-da!"
+    "You can probably do this part by hand. "
    ]
   },
   {
@@ -462,6 +377,12 @@
    "source": [
     "## Extensions\n",
     "\n",
+    "### Solving for the crystal structure\n",
+    "\n",
+    "To programmatically solve for the crystal structure, you will have to pattern match the ratios you obtained with known ratios for the simple crystal structures.\n",
+    "This is slightly tedious so I've omitted it here, but not anymore difficult to do than what we've already done.\n",
+    "\n",
+    "\n",
     "### Lattice constants\n",
     "\n",
     "If you want elemental identification, you will need to calculate the lattice constant. \n",
@@ -469,9 +390,11 @@
     "This only takes a couple seconds on any calculator. \n",
     "But if you do it with code for all the peak calculations, you can then run some statistics to quantify the variability.\n",
     "\n",
+    "\n",
     "### TEM diffraction\n",
     "\n",
     "How might you modify the code to index a ring pattern from polycrystalline diffraction? What about a spot pattern for single crystals?\n",
+    "\n",
     "\n",
     "### Peak fitting/identification\n",
     "\n",
@@ -517,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
