--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "### Interested in coding?\n",
     "\n",
-    "If you were looking for **a more thorough review**, including a **scaffolded programming exercise** to generate the XRD spectra, please see [my other notebook](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_plotting.ipynb) that will walk you through most of the details."
+    "If you were looking for a more thorough review, including a **scaffolded programming exercise** to generate the XRD spectra, please see [my other notebook](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_plotting.ipynb) that will walk you through most of the details."
    ]
   },
   {
@@ -76,12 +76,12 @@
     "$$ I = |F|^2 \\times P \\times L \\times m \\times A \\times T $$\n",
     "\n",
     "where\n",
-    "* $F$ is the Structure factor (we take the modulus before squaring because it might be a complex number).\n",
-    "* $P$ is the Polarization factor.\n",
+    "* $F$ is the structure factor (we take the modulus before squaring because it might be a complex number).\n",
+    "* $P$ is the polarization factor.\n",
     "* $L$ is the Lorentz factor.\n",
-    "* $m$ is the Multiplicity factor.\n",
-    "* $A$ is the Absorption factor.\n",
-    "* $T$ is the Temperature factor.\n",
+    "* $m$ is the multiplicity factor.\n",
+    "* $A$ is the absorption factor.\n",
+    "* $T$ is the temperature factor.\n",
     "\n",
     "Furthermore, recall that size effects can be included through the **Scherrer equation**, given by \n",
     "\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "code_folding": []
    },
@@ -159,7 +159,7 @@
     "    # Crystallographic planes\n",
     "    planes = [[1,0,0], [1,1,0], [1,1,1], [2,0,0], [2,1,0], [2,1,1], [2,2,0],\\\n",
     "              [2,2,1], [3,0,0], [3,1,0], [3,1,1], [2,2,2], [3,2,0], [3,2,1]]\n",
-    "    planes_str = [f'({p[0]}{p[1]}{p[2]})' for p in planes]   # string labels\n",
+    "    planes_str = [f'$({p[0]}{p[1]}{p[2]})$' for p in planes]   # string labels\n",
     "\n",
     "    # Set the basis\n",
     "    basis = []\n",
@@ -204,7 +204,8 @@
     "    I = np.multiply(np.absolute(F)**2, np.multiply(mult, Lp))\n",
     "    \n",
     "    # Plotting\n",
-    "    plt.rcParams.update({'figure.figsize':(10,5), 'font.size':22, 'axes.linewidth':2})\n",
+    "    plt.rcParams.update({'figure.figsize':(10,5), 'font.size':22, 'axes.linewidth':2,\n",
+    "                         'mathtext.fontset':'cm'})\n",
     "    xmin, xmax = (20, 160)\n",
     "    x = np.linspace(xmin, xmax, int(10*(xmax-xmin)))\n",
     "    fig, ax = plt.subplots()\n",
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,26 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0350aac27fb740a89faa798fa4719e7d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.352, description='Lattice constant (nm)', layout=Layout(height='30px…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "interact_manual.opts['manual_name'] = 'Generate plot'\n",
     "interact_manual(plot_XRD, a=a_widget, wavelength=w_widget, cell_type=c_widget, \n",
@@ -320,7 +306,7 @@
     "* Can you rationalize all the trends you see? \n",
     "* Describe all the ways **temperature** affects the XRD spectra.\n",
     "* How do we account for **strain** in our model? What differences might we observe between isotropic and anisotropic strain?\n",
-    "* If you're interested in scientific computing, try to understand how the Structure factor ($F$) is calculated with clever [NumPy](https://numpy.org/) tools."
+    "* If you're interested in scientific computing, try to understand how the structure factor ($F$) is calculated with clever [NumPy](https://numpy.org/) tools."
    ]
   },
   {
@@ -338,7 +324,7 @@
     "I thank Laura Armstrong, Nathan Bieberdorf, Han-Ming Hau, and Divya Ramakrishnan for user testing and helpful suggestions. \n",
     "I also thank [Prof. Andrew Minor](https://mse.berkeley.edu/people_new/minor/) for teaching MATSCI 204: Materials Characterization and my advisor [Prof. Mark Asta](https://mse.berkeley.edu/people_new/asta/) for his unwavering encouragement for my education-related pursuits. \n",
     "Interactivity is enabled with the [`ipywidgets`](https://ipywidgets.readthedocs.io/en/stable/) library. \n",
-    "This project is generously hosted on [GitHub](https://github.com/enze-chen/learning_modules), [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), and [nanoHUB](https://nanohub.org/tools/xrdinteract/) (older version)."
+    "This project is generously hosted on [GitHub](https://github.com/enze-chen/learning_modules) and [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb)."
    ]
   },
   {
@@ -349,10 +335,10 @@
     "\n",
     "## Assumptions I've taken great liberties with\n",
     "\n",
-    "* For the Structure factor, I greatly oversimplified the construction of the atomic scattering factor ($f$) and selected some numbers from the data for Fe.\n",
-    "* I also combined part of the Temperature factor into the Structure factor. \n",
-    "* I combined the Lorentz and Polarization factors, as is commonly done in the literature.\n",
-    "* I ignored the Absorption factor since it is more or less independent of $\\theta$.\n",
+    "* For the Structure factor, I greatly oversimplified the construction of the atomic scattering factor ($f$) and selected some numbers from the data for Ni.\n",
+    "* I also combined part of the temperature factor into the structure factor. \n",
+    "* I combined the Lorentz and polarization factors, as is commonly done in the literature.\n",
+    "* I ignored the absorption factor since it is more or less independent of $\\theta$.\n",
     "* I used a $\\sqrt[3]{\\theta}$ term to approximate the thermal background's general shape. I don't know the true analytical dependence, if there even is one.\n",
     "* I used a Gaussian distribution to model each peak to capture crystallite size effects. Peaks in general are *not* Gaussian.\n",
     "\n",
@@ -360,7 +346,7 @@
     "\n",
     "* It doesn't have great safeguards against numerical errors, such as invalid `arcsin` arguments and `NaN`. Please be gentle. ❤\n",
     "* There's a weird rendering error where for large intensities the upper limit (e.g. `1e6`) appears on the y-axis. **:shrug:**\n",
-    "* I left out \"simple cubic\" as one of the candidate structures because it results in too many numerical instabilities to correct for."
+    "* I left out \"simple cubic\" as one of the candidate structures because it results in too many numerical instabilities to correct for. It's also a boring spectra."
    ]
   }
  ],
