added instructions for saving to Drive

--- a/mse/XRD_indexing.ipynb
+++ b/mse/XRD_indexing.ipynb
@@ -46,7 +46,9 @@
    "source": [
     "## How to run this notebook\n",
     "\n",
-    "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_indexing.ipynb), then all the software is already set up for you (hooray). If you want to run the notebook locally, make sure all the Python libraries in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed.\n",
+    "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_indexing.ipynb), then all the software is already set up for you (hooray). \n",
+    "If you want to **save a copy** of this notebook for yourself, go to \"File > Save a copy in Drive\" and you will find it in your Google Drive account under \"My Drive > Colab Notebooks.\"\n",
+    "If you want to run the notebook locally, you can download it and make sure all the Python modules in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed before running it.\n",
     "\n",
     "For pedagogical reasons, there are a few places for you to fill in your own code in order to make the notebook fully functional. These are delineated with the dashed lines as follows, and you should **only change what's inside**. You don't have to edit the text or code anywhere else. I've also included \"**TODO**\" to separate the background context from the actual instructions.\n",
     "\n",
@@ -107,12 +109,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python library imports\n",
-    "These are all the required Python libraries. Like in many other languages (Java, C++, Julia, R), you have to import any special libraries before you can use their functions in your code.\n",
+    "## Python module imports\n",
     "\n",
-    "* [NumPy](https://numpy.org/) is a popular scientific computing library in Python.\n",
+    "These are all the required Python modules. Like in many other languages (Java, C++, Julia, R), you have to import any special modules before you can use their functions in your code.\n",
     "\n",
-    "* [pandas](https://pandas.pydata.org/) is a popular Python library for working with tabular data. Parts of it are built with NumPy. It's pronounced exactly how you think it's pronounced but unfortunately has no relationship to the cute bear.\n",
+    "* [NumPy](https://numpy.org/) is a popular scientific computing module in Python.\n",
+    "\n",
+    "* [pandas](https://pandas.pydata.org/) is a popular Python module for working with tabular data. Parts of it are built with NumPy. It's pronounced exactly how you think it's pronounced but unfortunately has no relationship to the cute bear.\n",
     "\n",
     "**TODO**: You have to execute the following code cell with `Shift+Enter` before any of the others."
    ]
