--- a/mse/XRD_plotting.ipynb
+++ b/mse/XRD_plotting.ipynb
@@ -42,9 +42,14 @@
    "source": [
     "## How to use this notebook\n",
     "\n",
-    "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), then everything is already set up for you (hooray). If you want to run the notebook locally, make sure all the Python libraries in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed.\n",
+    "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), then everything is already set up for you (hooray). \n",
+    "If you want to **save a copy** of this notebook for yourself, go to \"File > Save a copy in Drive\" and you will find it in your Google Drive account under \"My Drive > Colab Notebooks.\"\n",
+    "If you want to run the notebook locally, you can download it and make sure all the Python modules in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed before running it.\n",
     "\n",
-    "For pedagogical reasons, there are a few sections for you to complete the code in order to make the final plot. These sections are delineated with the dashed lines as follows, and you should **only change what's inside**. You don't have to edit the text or code anywhere else. I've also included \"**TODO**\" to separate instructions from the background context.\n",
+    "For pedagogical reasons, there are a few sections for you to complete the code in order to make the final plot. \n",
+    "These sections are delineated with the dashed lines as follows, and you should **only change what's inside**. \n",
+    "You don't have to edit the text or code anywhere else. \n",
+    "I've also included \"**TODO**\" to separate instructions from the background context.\n",
     "```python\n",
     "# ---------------------- #\n",
     "# YOUR CODE HERE\n",
@@ -62,9 +67,9 @@
    "source": [
     "----------------------------------\n",
     "\n",
-    "## Python library imports\n",
+    "## Python module imports\n",
     "\n",
-    "These are all the required Python libraries."
+    "These are all the required Python modules."
    ]
   },
   {
@@ -73,10 +78,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# General libraries\n",
+    "# General modules\n",
     "import itertools\n",
     "\n",
-    "# Scientific computing libraries\n",
+    "# Scientific computing modules\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -503,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
