--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -48,7 +48,9 @@
    "source": [
     "## How to use this notebook\n",
     "\n",
-    "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), then everything is already set up for you (hooray). If you want to run the notebook locally, make sure all the Python libraries in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed.\n",
+    "If you are viewing this notebook on [Google Colaboratory](https://colab.research.google.com/github/enze-chen/learning_modules/blob/master/mse/XRD_trends.ipynb), then everything is already set up for you (hooray).\n",
+    "If you want to **save a copy** of this notebook for yourself, go to \"File > Save a copy in Drive\" and you will find it in your Google Drive account under \"My Drive > Colab Notebooks.\"\n",
+    "If you want to run the notebook locally, you can download it and make sure all the Python modules in the [`requirements.txt`](https://github.com/enze-chen/learning_modules/blob/master/requirements.txt) file are installed before running it.\n",
     "\n",
     "To run this notebook, run all the cells (e.g. `Runtime > Run all` in the menu) and then adjust the sliders at the bottom. Click `Generate Plot` each time you change a setting. I **strongly recommend** just running the code and experimenting with the inputs *before* reading the code in great detail."
    ]
@@ -98,9 +100,9 @@
    "source": [
     "----------------------------------\n",
     "\n",
-    "## Python library imports\n",
+    "## Python module imports\n",
     "\n",
-    "These are all the required Python libraries."
+    "These are all the required Python modules."
    ]
   },
   {
@@ -109,16 +111,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# General libraries\n",
+    "# General modules\n",
     "import itertools\n",
     "\n",
-    "# Scientific computing libraries\n",
+    "# Scientific computing modules\n",
     "import numpy as np\n",
     "import scipy.stats as stats\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "# Interactivity libraries\n",
+    "# Interactivity modules\n",
     "from ipywidgets import interact_manual, fixed, \\\n",
     "                       IntSlider, FloatSlider, FloatLogSlider, RadioButtons, \\\n",
     "                       Button, Layout"
@@ -279,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After you have set your parameters, click **Generate plot** to see the resulting XRD spectra."
+    "After you have set your parameters, click **Generate Plot** to see the resulting XRD spectra."
    ]
   },
   {
@@ -290,7 +292,7 @@
    },
    "outputs": [],
    "source": [
-    "interact_manual.opts['manual_name'] = 'Generate plot'\n",
+    "interact_manual.opts['manual_name'] = 'Generate Plot'\n",
     "interact_manual(plot_XRD, a=a_widget, wavelength=w_widget, cell_type=c_widget, \n",
     "                          thickness=t_widget, T=T_widget, K=fixed(0.94));"
    ]
