comment out thermal expansion

--- a/mse/XRD_trends.ipynb
+++ b/mse/XRD_trends.ipynb
@@ -178,7 +178,7 @@
     "\n",
     "    # Convert planes to theta values (see equation above)\n",
     "    s_vals = np.array([np.linalg.norm(p) for p in planes])\n",
-    "    a += 3.5e-5 * T  # thermal expansion estimate for thermal strains\n",
+    "#     a += 1e-5 * T   # thermal expansion estimate; omit b/c a is alread indep var.\n",
     "    theta = np.arcsin(np.divide(wavelength/2, np.divide(a, s_vals)))\n",
     "    two_theta = 2 * np.degrees(theta)\n",
     "\n",
@@ -214,7 +214,7 @@
     "    \n",
     "    # Thermal effects. These functional dependencies ARE NOT REAL!!!\n",
     "    thermal_diffuse = 3e1 * T * np.cbrt(x)   # background signal\n",
-    "    sigma += (T + 5) / 2000   # peak broadening from vibrations\n",
+    "    sigma += (T + 5) / 2000    # peak broadening from vibrations\n",
     "    \n",
     "    # Save all the curves, then take a max envelope\n",
     "    all_curves = []\n",
